--- a/backend/.env.example
+++ b/backend/.env.example
@@ -27,6 +27,8 @@ DB_SSL_MODE=disable
 DB_MAX_OPEN_CONNS=25
 DB_MAX_IDLE_CONNS=5
 DB_CONN_MAX_LIFETIME=5m
+DB_AUTO_MIGRATE=false
+DB_MIGRATIONS_PATH=migrations
 
 # Redis Configuration
 REDIS_HOST=localhost
